# $Id$

bin_PROGRAMS = Esetroot Etbg Ettable
bin_SCRIPTS = Etcolors Etsearch kEsetroot

Esetroot_SOURCES = Esetroot.c
Esetroot_LDFLAGS = -rpath $(libdir):$(pkglibdir)

Etbg_SOURCES = Etbg.c
Ettable_SOURCES = Ettable.c

EXTRA_DIST = Etbg.c Esetroot.c Ettable.c Makefile.am \
             Makefile.in Etcolors Etsearch kEsetroot.in

